fixed word-break at contact-list

--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -42,7 +42,7 @@ body {
 
 .contact-list {
   z-index: 3;
-  min-width: 430px;
+  /* min-width: 430px; */
   /* min-height: calc(100vh - 100px); wenn es noch keine Kontakte gibt, müsste die Höhe auf min-height gesetzt werden. Aber dann haben wir am Ende ganz rechts einen Skrollbalken */
   height: 100%;
   box-shadow: 1px 0px 2px 2px rgb(0 0 0 / 16%);
@@ -50,6 +50,10 @@ body {
   height: calc(100vh - 100px);
   padding: 10px;
   overflow-y: auto;
+}
+
+.word-break{
+  word-break: break-word;
 }
 
 .contact-registery {
